# public/swagger/swagger.yaml
@@ -16,6 +16,7 @@ tags:
     description: Book operations
   - name: Books
     description: Book list
+    
 paths:
   /api/v1/books:
     summary: Return all list of books
@@ -31,13 +32,24 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Book'
+                  $ref: '#/components/schemas/BookWithId'
+                  
     post:
       tags:
         - Books
+      summary: adding a new book
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Book'
       responses:
         '201':
           description: Created
+        '409':
+          description: Conflict Book exists
+          
   /api/v1/books/{id}:
     summary: Find Book by id
     description: Returns Book based on id
@@ -63,6 +75,7 @@ paths:
                   $ref: '#/components/schemas/Book'
         '400':
           description: Bad Request
+          
   /api/v1/books/{id}/comments:
     summary: Find Book comments by id
     description: Returns Book comments based on id
@@ -86,6 +99,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Comment'
+                  
   /api/v1/books/{id}/characters:
     summary: Find Book characters by id
     description: Returns Book characters based on id
@@ -100,20 +114,9 @@ paths:
           schema:
             type: integer
             format: int64
-        - name: sort
-          in: query
-          description: sort by
-          required: false
-          schema:
-            type: string
-            enum:   [name,age,gender]
-        - name: filter
-          in: query
-          description: filter by
-          required: false
-          schema:
-            type: string
-            enum: [Male,Female,Other]  
+        - $ref: '#/components/parameters/sortCharacters'
+        - $ref: '#/components/parameters/filterCharacters'
+          
       responses:
         '200':
           description: A list of book characters.
@@ -134,32 +137,52 @@ components:
           format: int32
         message:
           type: string
+          
     Book:
       type: object
+      required:
+        - title
+        - authors
       properties:
-        id:
-          type: integer
-          format: int64
         title:
           type: string
         release_date:
           type: integer
           format: int32
-        comments_count:
-          type: integer
-          format: int64
         authors:
           type: array
           items:
             $ref: '#/components/schemas/Author'
+    BookWithId:
+      allOf:
+        - $ref: '#/components/schemas/Book'
+        - type: object
+          properties:
+            id:
+              type: integer
+              format: int64
+            comments_count:
+              type: integer
+              format: int64
             
     Author:
       type: object
       properties:
         name:
           type: string
+    AuthorWithId:
+      allOf:
+        - $ref: '#/components/schemas/Author'
+        - type: object
+          properties:
+            id:
+              type: integer
+              format: int64
     Character:
       type: object
+      required: 
+        - name
+        - gender
       properties:
         id:
           type: integer
@@ -175,8 +198,12 @@ components:
           type: string
         gender:
           $ref: '#/components/schemas/Gender'
+          
     Comment:
       type: object
+      required:
+        - comment
+        - ip
       properties:
         id:
           type: integer
@@ -189,19 +216,39 @@ components:
           type: string
         updated_at:
           type: string
+          
     Gender:
       type: object
+      required:
+        - gender_type
       properties:
         gender_type:
           type: string
+    GenderWithId:
+      allOf:
+        - $ref: '#/components/schemas/Gender'
+        - type: object
+          properties:
+            id:
+              type: integer
+              format: int64
   parameters:
-    sort:
+    sortCharacters:
       name: sort
       in: query
       description: sort paraemter
       required: false
       schema:
         type: string
+        enum: [name,age,gender]
+    filterCharacters:
+      name: filter
+      in: query
+      description: filter paraemter
+      required: false
+      schema:
+        type: string
+        enum: [Male,Female,Other]
       
   responses:
     NotFound:
